fix: buttons are overlapped when they are focused

--- a/web/src/connectors/documents-table-connector/documents-table-connector.module.scss
+++ b/web/src/connectors/documents-table-connector/documents-table-connector.module.scss
@@ -12,6 +12,7 @@
 }
 .container {
     width: 100%;
+    padding-top: 12px;
 }
 .wrapper {
     flex-shrink: 1;
